0.045  2011-10-28
- fixed Makefile.PL

0.044  2011-10-26
- fixed META.yml

0.043  2011-10-26
- fixed META.yml (thanks Aevar)
- fix warnings in the runtime for Perl 5.12

0.042  2011-04-28
- cosmetic changes (generated code is a bit more readable)

0.041  2011-04-20
- updated to Perlito 8.0

0.040  2011-04-05
- statement modifiers and minor fixes in Perlito

0.039  2010-09-03
- fix hash composer, assignment

0.038  2010-09-02
- perlito shell uses Term::ReadLine

0.037  2010-09-01
- added "perlito" command-line compiler and shell

0.035  2010-09-01
- moved compiler modules to "Perlito" namespace
- fixed range operator

0.034  2010-08-31
- documentation fix
- clean up perl5 warnings

0.033  2010-08-30
- new v6.pm module loader. 
  Written by Pawel Murias (pmurias++)
- "v6-perlito" now loads the Perlito compiler

Removed features:
- "v6-alpha" (Pugs::Compiler::Perl6) no longer supported
- "-e" command-line option no longer supported

0.032  2008-08-01
- pi, Inf, NaN
- more operators
- IO fixes

0.031  2008-07-30
- updated skipped tests

0.030  2008-07-29
- more operators

0.029  2008-07-28
- updated skipped tests

0.028  2008-07-27
- all(), any(), true(), not()
- improved smartmatching, given/when

0.027  2008-07-25
- more unicode tests are skipped

0.026  2008-07-25
- requires Pugs::Compiler::Rule 0.34 - better unicode support across perl distros

0.025  2008-07-24
- more tests
- several unicode tests are skipped, from cpan-testers feedback (I can't reproduce these failures - fglock)

0.024  2008-07-23
- many more tests added; the bigger tests are now split into smaller files

0.023  2008-07-21
- requires perl 5.8.6

0.022  2008-07-20
- implemented string interpolations \x[99] and \c[FOUR TEARDROP-SPOKED ASTERISK]
- fixed interpolated block in string
- q()
- updated test list in MANIFEST

0.021  2008-07-12

- fixed Test.pm compilation (added 'abs' function)
- Makefile.PL adds 'use v6-alpha' to standard tests

0.020  2007-08-26
