@@ -1,36 +1,36 @@
 ChangeLog
-lib/Perlito/AST.pm
-lib/Perlito/Clojure/Emitter.pm
-lib/Perlito/Emitter/Token.pm
-lib/Perlito/Eval.pm
-lib/Perlito/Expression.pm
-lib/Perlito/Go/Emitter.pm
-lib/Perlito/Go/Prelude.pm
-lib/Perlito/Go/Runtime.go
-lib/Perlito/Grammar.pm
-lib/Perlito/Grammar/Control.pm
-lib/Perlito/Grammar/Regex.pm
-lib/Perlito/Javascript/Emitter.pm
-lib/Perlito/Javascript/Prelude.pm
-lib/Perlito/Javascript/Runtime.js
-lib/Perlito/Lisp/Emitter.pm
-lib/Perlito/Lisp/Prelude.pm
-lib/Perlito/Lisp/Runtime.lisp
-lib/Perlito/Macro.pm
-lib/Perlito/Parrot/Emitter.pm
-lib/Perlito/Parrot/Match.pm
-lib/Perlito/Perl5/Emitter.pm
-lib/Perlito/Perl5/Prelude.pm
-lib/Perlito/Perl5/Runtime.pm
-lib/Perlito/Precedence.pm
-lib/Perlito/Python/Emitter.pm
-lib/Perlito/Python/Prelude.pm
-lib/Perlito/Python/Runtime.py
-lib/Perlito/Rakudo/Emitter.pm
-lib/Perlito/Ruby/Emitter.pm
-lib/Perlito/Ruby/Runtime.rb
-lib/Perlito/Runtime.pm
-lib/Perlito/Test.pm
+lib/Perlito6/AST.pm
+lib/Perlito6/Clojure/Emitter.pm
+lib/Perlito6/Emitter/Token.pm
+lib/Perlito6/Eval.pm
+lib/Perlito6/Expression.pm
+lib/Perlito6/Go/Emitter.pm
+lib/Perlito6/Go/Prelude.pm
+lib/Perlito6/Go/Runtime.go
+lib/Perlito6/Grammar.pm
+lib/Perlito6/Grammar/Control.pm
+lib/Perlito6/Grammar/Regex.pm
+lib/Perlito6/Javascript/Emitter.pm
+lib/Perlito6/Javascript/Prelude.pm
+lib/Perlito6/Javascript/Runtime.js
+lib/Perlito6/Lisp/Emitter.pm
+lib/Perlito6/Lisp/Prelude.pm
+lib/Perlito6/Lisp/Runtime.lisp
+lib/Perlito6/Macro.pm
+lib/Perlito6/Parrot/Emitter.pm
+lib/Perlito6/Parrot/Match.pm
+lib/Perlito6/Perl5/Emitter.pm
+lib/Perlito6/Perl5/Prelude.pm
+lib/Perlito6/Perl5/Runtime.pm
+lib/Perlito6/Precedence.pm
+lib/Perlito6/Python/Emitter.pm
+lib/Perlito6/Python/Prelude.pm
+lib/Perlito6/Python/Runtime.py
+lib/Perlito6/Rakudo/Emitter.pm
+lib/Perlito6/Ruby/Emitter.pm
+lib/Perlito6/Ruby/Runtime.rb
+lib/Perlito6/Runtime.pm
+lib/Perlito6/Test.pm
 lib/v6.pm
 lib/v6/perlito.pm
 Makefile.PL
