@@ -1,3 +1,5 @@
+- changed namespace from Perlito to Perlito6
+
 0.045  2011-10-28
 - fixed Makefile.PL
 
